# backends/gin/cmd/server/main.go
@@ -48,6 +48,7 @@ func main() {
 	v1.GET("/health", handler.GetHealth)
 	v1.GET("/avatars", handler.GetAvatars)
 	v1.POST("/stack-narration", handler.PostStackNarration)
+	v1.POST("/capsule-suggestion", handler.PostCapsuleSuggestion)
 
 	auth := v1.Group("/auth")
 	{
